Creación de layaout básica sin estilos

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -8,6 +8,22 @@
     <title>Encriptador</title>
 </head>
 <body>
-    
+    <section class="logo">
+        <img src="imagenes/logo.png" width="50px">
+    </section>
+
+    <section class="texto">
+        <textarea name="text-area" id="text-area" cols="30" rows="10">Ingrese el texto aquí</textarea>
+    </section>
+
+    <section class="botones">
+        <div class="encriptar"><button class="encriptar-button">Encriptar</button></div>
+        <div class="desencriptar"><button class="desencriptar-button">Desencriptar</button></div>
+    </section>
+
+    <section class="resultado">
+        <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
+        <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p>
+    </section>
 </body>
 </html>
