--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -8,22 +8,24 @@
     <title>Encriptador</title>
 </head>
 <body>
-    <section class="logo">
-        <img src="imagenes/logo.png" width="50px">
-    </section>
+    <div class="container">
+        <div class="logo">
+            <img src="imagenes/logo.png" width="50px">
+        </div>
 
-    <section class="texto">
-        <textarea name="text-area" id="text-area" cols="30" rows="10">Ingrese el texto aquí</textarea>
-    </section>
+        <div class="text">
+            <textarea name="text-area" id="input-text" cols="65" rows="20">Ingrese el texto aquí</textarea>
+        </div>
 
-    <section class="botones">
-        <div class="encriptar"><button class="encriptar-button">Encriptar</button></div>
-        <div class="desencriptar"><button class="desencriptar-button">Desencriptar</button></div>
-    </section>
+        <div class="buttons">
+            <div class="encriptar"><button class="encriptar-button">Encriptar</button></div>
+            <div class="desencriptar"><button class="desencriptar-button">Desencriptar</button></div>
+        </div>
 
-    <section class="resultado">
-        <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
-        <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p>
-    </section>
+        <div class="result">
+            <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
+            <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p>
+        </div>
+      </div>
 </body>
 </html>
