Layout básic estilizada

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -14,15 +14,16 @@
         </div>
 
         <div class="text">
-            <textarea name="text-area" id="input-text" cols="65" rows="20">Ingrese el texto aquí</textarea>
+            <textarea name="mensaje" class="input-text" rows="20" cols="80" placeholder="Ingrese el texto aquí"></textarea>
         </div>
 
         <div class="buttons">
-            <div class="encriptar"><button class="encriptar-button">Encriptar</button></div>
-            <div class="desencriptar"><button class="desencriptar-button">Desencriptar</button></div>
+            <button name="encriptar" class="button-encriptar">Encriptar</button>
+            <button name="desencriptar" class="button-desencriptar">Desencriptar</button>
         </div>
 
         <div class="result">
+            <img src="imagenes/Muñeco.png" class="no-mensaje-img" width="250px">
             <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
             <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
