adición de leyenda de restricción a minusculas y sin tilde

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -18,8 +18,14 @@
         </div>
 
         <div class="buttons">
-            <button name="encriptar" class="button-encriptar">Encriptar</button>
-            <button name="desencriptar" class="button-desencriptar">Desencriptar</button>
+            <div class="restriction">
+                <img src="imagenes/path848.png" class="restriction-icon" width="12px">
+                <p class="restriction-text">Solo letras minúsculas y sin tildes</p>
+            </div>
+            <div class="actions">
+                <button name="encriptar" class="button-encriptar">Encriptar</button>
+                <button name="desencriptar" class="button-desencriptar">Desencriptar</button>
+            </div>
         </div>
 
         <div class="result">
