cambio de colores y definición del hover para los botones

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Vina+Sans&family=Ysabeau:wght@100&display=swap" rel="stylesheet">
     <title>Encriptador</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
 
         <div class="buttons">
             <div class="restriction">
-                <img src="imagenes/path848.png" class="restriction-icon" width="12px">
+                <img src="imagenes/path848.png" class="restriction-icon" width="10px">
                 <p class="restriction-text">Solo letras minúsculas y sin tildes</p>
             </div>
             <div class="actions">
@@ -29,7 +30,10 @@
         </div>
 
         <div class="result">
-            <img src="imagenes/Muñeco.png" class="no-mensaje-img" width="250px">
+            <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
+                <img src="imagenes/5203299.jpg" class="no-mensaje-img" width="250px" alt="Imagen de storyset en Freepik">
+            </a>
+            
             <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
             <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
