--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -15,7 +15,8 @@
         </div>
 
         <div class="text">
-            <textarea name="mensaje" class="input-text" rows="20" cols="80" placeholder="Ingrese el texto aquí"></textarea>
+            <input type="text" class="input-text" id="text" rows="20" cols="80" placeholder="Ingrese el texto aquí">
+            <!-- <textarea name="mensaje" class="input-text" rows="20" cols="80" placeholder="Ingrese el texto aquí"></textarea> -->
         </div>
 
         <div class="buttons">
@@ -24,19 +25,22 @@
                 <p class="restriction-text">Solo letras minúsculas y sin tildes</p>
             </div>
             <div class="actions">
-                <button name="encriptar" class="button-encriptar">Encriptar</button>
-                <button name="desencriptar" class="button-desencriptar">Desencriptar</button>
+                <button name="encriptar" class="button-encriptar" id="encriptar">Encriptar</button>
+                <button name="desencriptar" class="button-desencriptar" id="desencriptar">Desencriptar</button>
             </div>
         </div>
 
         <div class="result">
-            <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
+
+            <p class="parrafo" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p>
+<!--             <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
                 <img src="imagenes/5203299.jpg" class="no-mensaje-img" width="250px" alt="Imagen de storyset en Freepik">
             </a>
             
             <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
-            <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p>
+            <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p> -->
         </div>
+        <script src="scripts.js"></script>
       </div>
 </body>
 </html>
