corrección de las funciones de encriptar y desencriptar completa

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -15,8 +15,7 @@
         </div>
 
         <div class="text">
-            <input type="text" class="input-text" id="text" rows="20" cols="80" placeholder="Ingrese el texto aquí">
-            <!-- <textarea name="mensaje" class="input-text" rows="20" cols="80" placeholder="Ingrese el texto aquí"></textarea> -->
+            <textarea name="mensaje" class="input-text" id="text" rows="20" cols="80" placeholder="Ingrese el texto aquí"></textarea>
         </div>
 
         <div class="buttons">
@@ -31,14 +30,11 @@
         </div>
 
         <div class="result">
-
-            <p class="parrafo" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p>
-<!--             <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
+            <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
                 <img src="imagenes/5203299.jpg" class="no-mensaje-img" width="250px" alt="Imagen de storyset en Freepik">
             </a>
-            
             <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
-            <p class="parrafo">Ingresa el texto que desees encriptar o desencriptar</p> -->
+            <p class="parrafo" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p> 
         </div>
         <script src="scripts.js"></script>
       </div>
