adición de botón para copiar el texto encriptado

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -30,11 +30,18 @@
         </div>
 
         <div class="result">
-            <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
-                <img src="imagenes/5203299.jpg" class="no-mensaje-img" width="250px" alt="Imagen de storyset en Freepik">
-            </a>
-            <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
-            <p class="parrafo" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p> 
+            <div class="results" id="success">
+                <p class="parrafo-si" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p> 
+                <button class="button-copiar" id="copiar">Copiar</button>
+            </div>
+            
+            <div class="results" id="error">
+                <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
+                    <img src="imagenes/5203299.jpg" class="no-mensaje-img" width="250px" alt="Imagen de storyset en Freepik">
+                </a>
+                <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
+                <p class="parrafo-no">Ingresa el texto que desees encriptar o desencriptar</p> 
+            </div>
         </div>
         <script src="scripts.js"></script>
       </div>
