implementación de la función para el botón de copiar

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -31,7 +31,7 @@
 
         <div class="result">
             <div class="results" id="success">
-                <p class="parrafo-si" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p> 
+                <p class="display-text" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p> 
                 <button class="button-copiar" id="copiar">Copiar</button>
             </div>
             
