--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -29,18 +29,18 @@
             </div>
         </div>
 
-        <div class="result">
-            <div class="results" id="success">
-                <p class="display-text" id="parrafo-display">Ingresa el texto que desees encriptar o desencriptar</p> 
-                <button class="button-copiar" id="copiar">Copiar</button>
-            </div>
-            
-            <div class="results" id="error">
-                <a href="https://www.freepik.es/vector-gratis/ups-error-404-ilustracion-concepto-robot-roto_13315300.htm#query=not%20found&position=0&from_view=search&track=robertav1_2_sidr">
+        <div class="result">           
+            <div class="display-text" id="parrafo-display">
+                <br><br><br><br><br>
+                <a href="https://shorturl.at/mvY09">
                     <img src="imagenes/5203299.jpg" class="no-mensaje-img" width="250px" alt="Imagen de storyset en Freepik">
                 </a>
                 <h3 class="no-mensaje">Ningún mensaje fue encontrado</h3>
                 <p class="parrafo-no">Ingresa el texto que desees encriptar o desencriptar</p> 
+            </div>
+
+            <div class="copy">
+                <button class="button-copiar" id="copiar">Copiar</button>
             </div>
         </div>
         <script src="scripts.js"></script>
