cambio de paleta de colores y del scrollbar

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="text-input">
-            <textarea class="input" id="input" rows="20" cols="80" placeholder="Ingrese el texto aquí"></textarea>
+            <textarea class="input" id="input" rows="20" cols="80" placeholder="Ingrese el texto aquí" spellcheck="false"></textarea>
         </div>
 
         <div class="text-display">           
