cambio de imagen de error, logo y color de botones

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="imagenes/logo.png" width="50px">
+            <img src="imagenes/g2498.png" width="50px">
         </div>
 
         <div class="text-input">
@@ -21,9 +21,7 @@
         <div class="text-display">           
             <div class="display" id="display">
                 <br><br><br><br><br>
-                <a href="https://shorturl.at/mvY09">
-                    <img src="imagenes/5203299.jpg" class="no-message-img" width="250px" alt="Imagen de storyset en Freepik">
-                </a>
+                <img src="imagenes/Muñeco.png" class="no-message-img" width="250px">
                 <h3>Ningún mensaje fue encontrado</h3>
                 <p>Ingresa el texto que desees encriptar o desencriptar</p> 
             </div>
