implementación de la pantalla responsiva

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Vina+Sans&family=Ysabeau:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Vina+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Encriptador</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="imagenes/g2498.png" width="50px">
+            <div class="logo-back">
+                <img src="imagenes/g2498.png" width="50px">
+            </div>
         </div>
 
         <div class="text-input">
@@ -20,7 +22,6 @@
 
         <div class="text-display">           
             <div class="display" id="display">
-                <br><br><br><br><br>
                 <img src="imagenes/Muñeco.png" class="no-message-img" width="250px">
                 <h3>Ningún mensaje fue encontrado</h3>
                 <p>Ingresa el texto que desees encriptar o desencriptar</p> 
