--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
     <div class="container">
         <div class="header">
             <div class="logo-back">
-                <img src="imagenes/g2498.png" width="50px">
+                <img src="imagenes/g2498.png" height="26px">
             </div>
         </div>
 
         <div class="text-input">
-            <textarea class="input" id="input" rows="20" cols="80" placeholder="Ingrese el texto aquí" spellcheck="false"></textarea>
+            <textarea class="input" placeholder="Ingrese el texto aquí" spellcheck="false"></textarea>
         </div>
 
         <div class="text-display">           
-            <div class="display" id="display">
+            <div class="display">
                 <img src="imagenes/Muñeco.png" class="no-message-img" width="250px">
                 <h3>Ningún mensaje fue encontrado</h3>
                 <p>Ingresa el texto que desees encriptar o desencriptar</p> 
             </div>
 
             <div class="text-copy">
-                <button class="copy" id="copy">Copiar</button>
+                <button class="button-copy">Copiar</button>
             </div>
 
         </div>
 
         <div class="text-actions">
             <div class="restriction">
-                <img src="imagenes/path848.png" class="restriction-icon" width="10px">
-                <p class="restriction-text">Solo letras minúsculas y sin tildes</p>
+                <img src="imagenes/path848.png" width="10px">
+                <p>Solo letras minúsculas y sin tildes</p>
             </div>
 
             <div class="actions">
-                <button class="button-cipher" id="cipher">Encriptar</button>
-                <button class="button-decipher" id="decipher">Desencriptar</button>
+                <button class="button-cipher">Encriptar</button>
+                <button class="button-decipher">Desencriptar</button>
             </div>
         </div>
 
