--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imagenes/icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Vina+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Encriptador</title>
@@ -22,7 +23,7 @@
 
         <div class="text-display">           
             <div class="display">
-                <img src="imagenes/Muñeco.png" class="no-message-img" width="250px">
+                <img src="imagenes/error404.png" class="no-message-img" width="250px">
                 <h3>Ningún mensaje fue encontrado</h3>
                 <p>Ingresa el texto que desees encriptar o desencriptar</p> 
             </div>
